# Face_classification

./: .gitignore  README.md  pyproject.toml
data/: im_name2label_train.json  im_name2label_train_balanced.json  im_name2label_val.json  inferencce_labels.json  inference_labels.txt
notebooks/: data_analysis.ipynb  score_val_data.ipynb
scripts/: score_val_dataset.py  split_dataset.py
src/face_classification/: augmentations.py  classification_metrics.py  config.yaml  dataset.py  losses_registry.py  metrics_registry.py  models_registry.py  optimizers_registry.py  schedulers_registry.py  train.py  trainer.py
