[tool.ruff]
line-length = 100
# lint, pyflakes, pycodestyle
select = ["F", "E", "W"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
line_length = 120
profile = 'black'

[tool.poetry]
name = "face_classification"
version = "0.1.0"
description = ""
readme = "README.md"

authors = ["Christian <christian@allisone.ai>"]

[tool.poetry.dependencies]
python = "3.10.5"
torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp310-cp310-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu116/torchvision-0.14.1%2Bcu116-cp310-cp310-linux_x86_64.whl" }
omegaconf = "^2.3.0"
albumentations = "^1.4.14"
torchmetrics = "^1.4.1"
tqdm = "^4.66.5"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
clearml = "^1.16.4"
tensorboard = "^2.17.1"
numpy = "1.24.4"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

